# fuzzy-panther

./: README.md
SimpleGamesCollection/: .gitignore  CMakeLists.txt
SimpleGamesCollection/Classes/: AppDelegate.cpp
SimpleGamesCollection/Classes/asteroids/: AsteroidNode.cpp  AsteroidNode.h  AsteroidsGameNode.cpp  AsteroidsGameNode.h  AsteroidsScene.cpp  AsteroidsScene.h  GameEndScene.cpp  GameEndScene.h  GameManager.cpp  GameManager.h  LaserNode.cpp  LaserNode.h  SpaceshipNode.cpp  SpaceshipNode.h  ZOrderValues.h
SimpleGamesCollection/Classes/bird/: BirdMainScene.cpp  BirdMainScene.h  CommonUtils.h  GameEndScene.cpp  GameEndScene.h  MapSectionNode.cpp  MapSectionNode.h  ModuleNode.cpp  ModuleNode.h  WizardNode.cpp  WizardNode.h
SimpleGamesCollection/Classes/blackjack/: BlackboardNode.cpp  BlackboardNode.h  BlackjackCommonUtils.h  BlackjackMainScene.cpp  BlackjackMainScene.h  GameStateKeeper.cpp  GameStateKeeper.h  GameTableNode.cpp  GameTableNode.h
SimpleGamesCollection/Classes/blocks/: BlocksGameNode.cpp  BlocksGameNode.h  BlocksMainScene.cpp  BlocksMainScene.h  BrickInfo.h  CommonUtils.h  FigureFactory.cpp  FigureFactory.h  FigureInfo.cpp  FigureInfo.h  GameStateKeeper.h  WallInfo.cpp  WallInfo.h
SimpleGamesCollection/Classes/eyes/: EyesMainScene.cpp  EyesMainScene.h
SimpleGamesCollection/Classes/fifteen/: BoardCombinationsFactory.cpp  BoardCombinationsFactory.h  FifteenGameNode.cpp  FifteenGameNode.h  FifteenMainScene.cpp  FifteenMainScene.h  TokenNode.cpp  TokenNode.h  ZOrderValues.h
SimpleGamesCollection/Classes/flowers/: FlowersGameNode.cpp  FlowersGameNode.h  FlowersMainScene.cpp  FlowersMainScene.h  GameStateKeeper.cpp  GameStateKeeper.h  TileNode.cpp  TileNode.h  TileType.h  ZOrderValues.h
SimpleGamesCollection/Classes/life/: CellNode.cpp  CellNode.h  GameNode.cpp  GameNode.h  LifeMainScene.cpp  LifeMainScene.h  ZOrderValues.h
SimpleGamesCollection/Classes/main_menu/: BackgroundNode.cpp  BackgroundNode.h  MainMenuScene.cpp  MainMenuScene.h
SimpleGamesCollection/Classes/repeat/: DigitNode.cpp  DigitNode.h  GameNode.cpp  GameNode.h  RepeatMainScene.cpp  RepeatMainScene.h  ZOrderValues.h
SimpleGamesCollection/Classes/snake/: BodyPartsFactory.cpp  BodyPartsFactory.h  DirectionType.h  GameNode.cpp  GameNode.h  GameStateKeeper.cpp  GameStateKeeper.h  SnakeMainScene.cpp  SnakeMainScene.h  ZOrderValues.h
SimpleGamesCollection/Classes/sokoban/: ActorNode.cpp  ActorNode.h  BoxNode.cpp  BoxNode.h  GameNode.cpp  GameNode.h  SokobanMainScene.cpp  SokobanMainScene.h  TargetNode.cpp  TargetNode.h  ZOrderValues.h
SimpleGamesCollection/Resources/asteroids/: asteroids.plist
SimpleGamesCollection/Resources/bird/: maps.plist  wizard.plist  wizard_animations.plist
SimpleGamesCollection/Resources/blackjack/: cards_clubs.plist
SimpleGamesCollection/Resources/blackjack/cards/: cards_clubs.plist  cards_diamonds.plist  cards_hearts.plist  cards_spades.plist
SimpleGamesCollection/Resources/flowers/: flowers.plist
SimpleGamesCollection/Resources/life/: life.plist
SimpleGamesCollection/Resources/menu/: menu.plist
SimpleGamesCollection/Resources/repeat/: animations.plist  repeat.plist
SimpleGamesCollection/Resources/snake/: barrel_animations.plist  snake_animations.plist  snake_images.plist
SimpleGamesCollection/Resources/snake/obsolete/: snake_animations.plist  snake_images.plist
SimpleGamesCollection/Resources/sokoban/: animations.plist  dungeon48.tsx  map01.tmx  movables.plist
SimpleGamesCollection/c6_lib/: CMakeLists.txt
SimpleGamesCollection/c6_lib/include/: SixCatsLogger.h  SixCatsLoggerLoggable.h  SixCatsLoggerMacro.h
SimpleGamesCollection/c6_lib/src/: SixCatsLogger.cpp  SixCatsLoggerLoggable.cpp
SimpleGamesCollection/proj.android/: settings.gradle
SimpleGamesCollection/proj.android/app/: AndroidManifest.xml  build.gradle
SimpleGamesCollection/proj.android/app/res/values/: strings.xml
SimpleGamesCollection/proj.ios_mac/mac/: Info.plist
